--- a/443t.html
+++ b/443t.html
@@ -15,7 +15,7 @@
                 </div>
             </div>
             <div class="options">
-                <a href="home.html" class="option">home</a>
+                <a href="index.html" class="option">home</a>
                 <a href="45ee.html" class="option">previous projects</a>
                 <a href="443t.html" class="option" id='chosenoption'>about</a>
                 
