--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
             </div>
 
                 <div class='cntr'>
-                    <p style="text-indent: 35px;">I'm a 21 years old, bachelor's degree software engineering student in China. I am from Ethiopia. I'm looking forward to work 
-                        as freelancer in front-end web designing, or App development projects(python, java, C++). Feel free to contact me for any inquiries related to my field of interests.
+                    <p style="text-indent: 35px;">I'm a 21 years old, bachelor's degree software engineering student in China. I am from Ethiopia. 
+                        A bachelor’s degree software engineering and management graduate from 南京航空航天大学。Seeking an opportunity to learn and use my programming skills to create something new and helpful to the society
+                        I'm looking forward to hear from you. Feel free to contact me for any inquiries related to my field of interests.
                     </p>
                     <h4>
                         Skills
@@ -44,7 +45,7 @@
                         <li>Python</li>
                         <li>HTML</li>
                         <li>C++</li>
-                        <li>JAVA</li>
+                        <li>Game development in unity with C#</li>
                     </ul>
                 </div>
         </div>
