--- a/443t.html
+++ b/443t.html
@@ -1,23 +1,31 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
-    <head>
-        <link rel="stylesheet" href="styling.css">
-        <title>About</title>
-        
-    </head>
-    <body>  
-        <div id='page'>        
-            <h1 id="header">portfolio</h1>   
-            <div class="top">                                
+<head>
+    <link rel="stylesheet" href="styling.css">
+    <title>About</title>
+
+</head>
+<body>
+    <div id='content'>
+        <div id='page'>
+            <h1 id="header">portfolio</h1>
+
+            <div class="top">
                 <div id="intro">
                     <h2>Amanuel Tesfaye</h2>
                     <h5 style="font:message-box; font-style: italic;">Let's bring your ideas into real-life!</h5>
                 </div>
+                <video autoplay muted loop id="myVideo">
+                    <source src="rainbkgrnd.mp4" type="video/mp4">
+                </video>
             </div>
             <div class="options">
                 <a href="index.html" class="option">home</a>
                 <a href="45ee.html" class="option">previous projects</a>
                 <a href="443t.html" class="option" id='chosenoption'>about</a>
-                
+
             </div>
         </div>
+    </div>
+</body>
+</html>
