--- a/45ee.html
+++ b/45ee.html
@@ -10,7 +10,7 @@
         <h1 id="header">portfolio</h1>
         <div class="top">
             <div id="intro">
-                <h2>Amanuel Tesfaye</h2>
+                <h2>Amanuel Tesfaye Demissie</h2>
                 <h5 style="font:message-box; font-style: italic;">Let's bring your ideas into real-life!</h5>
             </div>
             <video autoplay muted loop id="myVideo">
