--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <div class="left">
                         <img src="amanu.jpg" alt="profile picture" width="150px" style="border-radius: 10%">
                         <h4 style="text-decoration-line: underline;">About Me</h4>
-                        <p>I am a  BS Software Engineering student in Nanjing University Of Aeronautics and Astronautics, in China</p>
+                        <p>I am a  Master Degree student of Computer Science and Technology in Nanjing University Of Aeronautics and Astronautics, in China</p>
 
                         <h4 style="text-decoration-line: underline;">Contact</h4>
                         <p>Wechat ID - amantes30</p>
