--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
                     <h1 id="header">Portfolio</h1>
                     <div class="top">
                         <div id="intro">
-                        <h2>Amanuel Tesfaye Demissie</h2>
-                        <h5 style="font:message-box; font-style: italic;">Let's bring your ideas into real-life!</h5>
+                            <h2>Amanuel Tesfaye Demissie</h2>
+                            <h5 style="font:message-box; font-style: italic;">Programmer</h5>
                         </div>
                     
                     </div>
                     <div class="options">
-                    <a href="index.html" class="option" id='chosenoption'>home</a>
-                    <a href="45ee.html" class="option">previous projects</a>
-                    <a href="443t.html" class="option">about</a>
+                        <a href="index.html" class="option" id='chosenoption'>home</a>
+                        <a href="45ee.html" class="option">previous projects</a>
+                        <a href="443t.html" class="option">about</a>
 
                     </div>
 
@@ -42,7 +42,7 @@
                     <div class="left">
                         <img src="amanu.jpg" alt="profile picture" width="150px" style="border-radius: 10%">
                         <h4 style="text-decoration-line: underline;">About Me</h4>
-                        <p>I am a  Master Degree student of Computer Science and Technology in Nanjing University Of Aeronautics and Astronautics, in China</p>
+                        
 
                         <h4 style="text-decoration-line: underline;">Contact</h4>
                         <p>Wechat ID - amantes30</p>
